modify index look

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: base
 ---
 <div class="blog-cover" style="background-image:url(/images/{{ site.inc.cover_image }});">
-    
+
     <section>
         <div class="container">
             <h1>{{ site.inc.title }}</h1>
             {% if site.inc.subtitle %}<h3>{{ site.inc.subtitle }}</h3>{% endif %}
-        
+
             {% if site.inc.twitter %}
             <a href="https://twitter.com/{{ site.inc.twitter }}" title="Follow on Twitter" target="_blank"><i class="icon icon-twitter"></i></a>
             {% endif %}
@@ -23,6 +23,9 @@ layout: base
 
 
 <article class="container">
+    <div class="section-title">
+        <h1 class="title">Recent News</h1>
+    </div>
 {% for post in paginator.posts %}
   {% unless post.draft %}
     <section class="index">
