New pages placeholders

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@ layout: base
 
 <article class="container">
     <div class="section-title">
-        <h1 class="title">Recent News</h1>
+        <h1 class="title">Recent and Upcoming Events</h1>
+    </div>
+</article>
+<article class="container">
+    <div class="section-title">
+        <h1 class="title">Featured Blog Posts</h1>
     </div>
 {% for post in paginator.posts %}
   {% unless post.draft %}
