modularizing code, fontawesome

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@ layout: base
             {% if site.inc.twitter %}
             <a href="https://twitter.com/{{ site.inc.twitter }}" title="Follow on Twitter" target="_blank"><i class="icon icon-twitter"></i></a>
             {% endif %}
+            {% if site.inc.github %}
+            <a href="https://github.com/{{ site.inc.github }}" title="Follow on Github" target="_blank">
+                <i class="fa fa-github"aria-hidden="true"></i>
+            </a>
+            {% endif %}
             {% if site.inc.facebook %}
             <a href="http://facebook.com/{{ site.inc.facebook }}" title="Like on Facebook" target="_blank"><i class="icon icon-facebook"></i></a>
             {% endif %}
