--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta charset="UTF-8">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
-  <title>Docsify Demo</title>
+  <title>TralahTek Organisation</title>
 </head>
 <body>
   <div id="app"></div>
   <script>
     window.$docsify = {
       el: "#app",
-      repo: 'https://github.com/bryantson/OpensourceDotComDemos/tree/master/DocsifyDemo',
+      repo: 'https://github.com/tralahtek/org.tralahtek.com/tree/docsify',
       loadSidebar: true
     }
   </script>
