--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
-  <title>TralahTek Organisation</title>
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/dark.css">
+  <title>TralahTek Software Foundation</title>
 </head>
 <body>
   <div id="app"></div>
@@ -15,7 +15,8 @@
     window.$docsify = {
       el: "#app",
       repo: 'https://github.com/tralahtek/org.tralahtek.com/tree/docsify',
-      loadSidebar: true
+      loadSidebar: true,
+      loadNavbar: true
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
