--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       loadSidebar: true,
       loadNavbar: true,
       logo:"/images/logo_icon.svg",
-      disqus:"TralahM",
+      // disqus:"TralahM",
       autoFooter:{
         name: 'TralahTek',
         url: 'https://tralahm.tralahtek.com',
-        copyYear:'',
-        policy:'',
-        terms:''
+        copyYear:''
+        // policy:'',
+        // terms:''
       }
     };
   </script>
@@ -33,7 +33,7 @@
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/external-script.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/disqus.min.js"></script>
+  <!-- <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/disqus.min.js"></script> -->
   <!-- CDN files for docsify-katex -->
   <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
   <!-- or <script src="//cdn.jsdelivr.net/gh/upupming/docsify-katex@latest/dist/docsify-katex.js"></script> -->
