--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       repo: 'https://github.com/tralahtek/org.tralahtek.com/tree/docsify',
       loadSidebar: true,
       loadNavbar: true,
+      coverpage: true,
       logo:"/images/logo_icon.svg",
       // disqus:"TralahM",
       autoFooter:{
