--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta charset="UTF-8">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/dark.css">
+  <link rel="icon" href="images/logo_icon.svg"/>
   <title>TralahTek Software Foundation</title>
 </head>
 <body>
@@ -21,9 +22,9 @@
       logo:"/images/logo_icon.svg",
       // disqus:"TralahM",
       autoFooter:{
-        name: 'TralahTek',
+        name: 'TralahTek Software Foundation',
         url: 'https://tralahm.tralahtek.com',
-        copyYear:''
+        copyYear:'2020'
         // policy:'',
         // terms:''
       }
@@ -39,13 +40,9 @@
   <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
   <!-- or <script src="//cdn.jsdelivr.net/gh/upupming/docsify-katex@latest/dist/docsify-katex.js"></script> -->
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css"/>
-  <!-- unpkg.com -->
-  <script src="https://unpkg.com/docsify-sidebarfooter"></script>
 
   <!-- jsDelivr -->
-  <script src="https://cdn.jsdelivr.net/npm/docsify-sidebarfooter"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-sidebarfooter"></script>
 
-  <!-- locally -->
-  <script src="docsify-sidebarfooter.js"></script>
 </body>
 </html>
