--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     window.$docsify = {
       el: "#app",
       repo: 'https://github.com/tralahtek/org.tralahtek.com/tree/docsify',
-      loadSidebar: true,
+      // loadSidebar: true,
       loadNavbar: true,
       coverpage: true,
       logo:"/images/logo_icon.svg",
