coverpage background image
Signed-off-by: TralahM <musyoki.brian@tralahtek.com>

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <title>TralahTek Software Foundation</title>
 </head>
 <body>
+  <style>
+    #coverpage{
+      background-image: url('./images/bg.jpg');
+    }
+  </style>
   <div id="app"></div>
   <script>
     window.$docsify = {
