coverpage background image
Signed-off-by: TralahM <musyoki.brian@tralahtek.com>

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <style>
     #coverpage{
       background-image: url('./images/bg.jpg');
+    };
+    #app{
+      background-image: url('./images/bg.jpg');
     }
   </style>
   <div id="app"></div>
